# smart_parking_management

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEAN_ARCHITECTURE_GUIDE.md  Dockerfile  Makefile  PRE_REFACTOR_CHECKLIST.md  README.md  docker-compose.yml  mkdocs.yml  original prompt.md  pyproject.toml
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: test-deploy.yaml
src/: check_all_tables.py  check_db.py  check_db_schema.py  check_duplicates.py  check_parking_db.py  init_database.py  main_backend.py  main_frontend.py  settings_env.py  test_exit.py  utils.py
src/api/: api.py  api_route.py  log_config.py
src/api/routers/: parking.py
src/application/repositories/: __init__.py  abstract_repositories.py
src/application/services/: analytics_service.py  parking_service.py
src/config/: settings_env.py
src/database/: cleanup.py  custom_types.py  database.py  models.py
src/domain/: common.py  entities.py
src/infrastructure/api/schemas/: parking.py
src/infrastructure/ml_agents/: ai.py  parking_agent.py  parking_agent_direct.py  parking_agent_hybrid.py  parking_agent_simple.py  parking_agent_sync.py
src/infrastructure/persistence/: cleanup.py  database.py
src/infrastructure/persistence/models/: models.py
src/infrastructure/persistence/sqlalchemy_repositories/: __init__.py  sqlalchemy_repositories.py
src/infrastructure/ui/: 0_Home.py  1_parking_dashboard.py  2_ai_assistant.py
src/infrastructure/ui/pages/: 1_parking_dashboard.py  2_ai_assistant.py
src/ml/: parking_agent.py  parking_agent_direct.py  parking_agent_hybrid.py  parking_agent_simple.py  parking_agent_sync.py
src/pages/: 1_parking_dashboard.py  2_ai_assistant.py  3_fastapi_azure_rag.py
src/schemas/: parking.py
src/services/: analytics_service.py  parking_service.py
src/shared/: custom_types.py  utils.py
tests/: conftest.py  test_ai.py  test_analytics_service.py  test_check_all_tables.py  test_check_db.py  test_cleanup.py  test_custom_types.py  test_database.py  test_entities.py  test_llm_endpoint.py  test_models.py  test_parking_agents.py  test_parking_service.py  test_rag.py  test_schemas.py  test_settings.py
