[project]
name = "parking-management-system"
version = "0.1.0"
description = "Parking Management System with AI Agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # AI dependencies
    "litellm==1.63.14",
    "openai==1.66.3",
    "crewai==0.41.1",
    "langchain==0.2.11",
    "langchain-openai==0.1.20",
    # Database
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "aiosqlite==0.20.0",
    # backend & frontend
    "streamlit==1.40.1",
    # Engineering
    "pydantic==2.10.6",
    "pydantic-settings>=2.8.1",
    "loguru==0.7.3",
    "rich==13.9.4",
    # Data processing
    "pandas==2.2.3",

]

############### uv configuration
# uses also the depenencies in the [project.dependencies] section
[tool.uv]
managed = true
default-groups = ["dev", "docs"]

[dependency-groups]
# if you add new dependencies here, make sure to add them to [tool.uv] default-groups up above
dev = [
    "pytest == 8.3.0",
    "pytest-asyncio == 0.24.0",
    "pre-commit == 4.0.1",
    "jupyter==1.1.1",
    "ruff==0.8.1",
    "pytest-cov==5.0.0"
]
docs = [
    "mkdocs == 1.6.1",
    "mkdocs-material>=9.5.41",
    "mkdocstrings>=0.26.2",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings-python",
    "mkdocs-same-dir",
    "mkdocs-exclude"
]


# scripts : inside the root folder, you can run `uv run --directory . hi` or
# [project.scripts]
# hello = "tmp" # will read from __init__.py.

# pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


# ruff configuration
[tool.ruff]
extend-exclude = ["*.ipynb"]
line-length = 100

# Enable all `pydocstyle` rules, limiting to those that adhere to the Google convention via `convention = "google"`
[tool.ruff.lint]
select = ["D", "F401"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D417"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.pylint.main]
pythonpath = ["src"]

[tool.pylint.'MESSAGES CONTROL']
disable = "E0401"
